[package]
name = "device2"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.2"
prost = "0.13.4"
tokio = { version="1.41.1", features = ["rt-multi-thread","macros"] }
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk", tag = "v1.1.0" }


[build-dependencies]
tonic-build = "0.12.2"